# UMLS-to-KG

./: Cargo.toml  README.md  flake.nix
crates/umls/: Cargo.toml  README.md
crates/umls/examples/: simple.rs
crates/umls/src/: error.rs  lib.rs
crates/umls/src/conso/: mod.rs  models.rs
crates/umls/src/definition/: models.rs
crates/umls/src/metathesaurus/: mod.rs
crates/umls/src/metathesaurus/conso/: models.rs
crates/umls/src/metathesaurus/definition/: mod.rs  models.rs
crates/umls/src/metathesaurus/rel/: mod.rs  models.rs
crates/umls/src/metathesaurus/sty/: mod.rs  models.rs
crates/umls/src/rel/: models.rs
crates/umls/src/semantic_network/: mod.rs
crates/umls/src/semantic_network/definition/: mod.rs  models.rs
crates/umls/src/semantic_network/relation/: mod.rs  models.rs
nix/: package.nix
src/: main.rs
src/saver/: definition.rs  entity.rs  mod.rs  relation.rs  semdef.rs  semmet.rs  semrel.rs
