[package]
name = "umls2kg"
version = "0.1.0"
edition = "2024"
authors = [
  "c2fc2f <contact@c2fc2f.com>"
]
description = "Converts the UMLS dataset into a CSV-based Knowledge Graph for Neo4j"
readme = "README.md"
repository = "https://github.com/c2fc2f/UMLS-to-KG"
license = "MIT"
keywords = [
  "umls", 
  "knowledge-graph", 
  "neo4j", 
]
categories = [
  "command-line-utilities", 
  "database"
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
umls = { path = "./crates/umls/" }
anyhow = "1"
csv = "1"
fxhash = "0.2"
